# deitos-node

./: .gitignore  Cargo.toml  README.md  file_header.txt
.github/templates/setup-build/: action.yml
.github/workflows/: build-test.yml  linters.yml  main.yml  publish-artifact.yml
docs/: pallet-deitos-user-guide.md  userguide-revisited.md
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/deitos/: Cargo.toml  README.md
pallets/deitos-fs/: Cargo.toml  README.md
pallets/deitos-fs/src/: benchmarking.rs  impls.rs  lib.rs  types.rs  weights.rs
pallets/deitos-fs/src/tests/: fs.rs  mod.rs
pallets/deitos/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/deitos/src/tests/: agreements.rs  ip.rs  mod.rs  payments.rs  rating.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: deitos.rs  lib.rs
runtime/src/constants/: mod.rs  time.rs
